basic home page styling - issue with CSS padding/align incorrect on picture on home - correct asap

--- a/src/Components/App/style.css
+++ b/src/Components/App/style.css
@@ -1,11 +1,19 @@
 .App {
 
-  background-color: #FAF9F6
+  background-color: #FAF9F6;
+  align-items: center;
 
 }
 
 .appTitle {
 
   text-align: center;
+
+}
+
+.defaultText {
+
+  padding: 20px;
+  text-align: justify;
 
 }
